fix form method

--- a/InvenTree/templates/account/login.html
+++ b/InvenTree/templates/account/login.html
@@ -26,7 +26,7 @@
   {% endif %}
 </div>
 
-<form class="login" method="POST" action="{% url 'account_login' %}">
+<form class="login" method="post" action="{% url 'account_login' %}">
   {% csrf_token %}
   {{ form|crispy }}
   {% if redirect_field_value %}
