--- a/InvenTree/templates/account/password_reset.html
+++ b/InvenTree/templates/account/password_reset.html
@@ -17,7 +17,7 @@
     {% if mail_conf and enable_pwd_forgot %}
     <p>{% trans "Forgotten your password? Enter your email address below, and we'll send you an email allowing you to reset it." %}</p>
 
-    <form method="POST" action="{% url 'account_reset_password' %}" class="password_reset">
+    <form method="post" action="{% url 'account_reset_password' %}" class="password_reset">
         {% csrf_token %}
         {{ form|crispy }}
         <input type="submit" class="btn btn-primary btn-block" value="{% trans 'Reset My Password' %}" />
