--- a/InvenTree/templates/account/password_reset_from_key.html
+++ b/InvenTree/templates/account/password_reset_from_key.html
@@ -11,7 +11,7 @@
         <p>{% blocktrans %}The password reset link was invalid, possibly because it has already been used.  Please request a <a href="{{ passwd_reset_url }}">new password reset</a>.{% endblocktrans %}</p>
     {% else %}
         {% if form %}
-            <form method="POST" action="{{ action_url }}">
+            <form method="post" action="{{ action_url }}">
                 {% csrf_token %}
                 {{ form|crispy }}
                 <div class='btn-group float-right' role='group'>
