fix template changes

--- a/InvenTree/templates/InvenTree/settings/login.html
+++ b/InvenTree/templates/InvenTree/settings/login.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 {% load inventree_extras %}
 
-{% block content %}login{% endblock content %}
+{% block label %}login{% endblock label %}
 
 {% block heading %}
 {% trans "Login Settings" %}
