--- a/InvenTree/company/templates/company/detail.html
+++ b/InvenTree/company/templates/company/detail.html
@@ -390,7 +390,7 @@
         });
         {% endif %}
 
-        {% if roles.salse_order.add %}
+        {% if roles.sales_order.add %}
         $("#new-sales-order").click(function() {
 
             createSalesOrder({
