--- a/InvenTree/company/templates/company/detail.html
+++ b/InvenTree/company/templates/company/detail.html
@@ -255,6 +255,31 @@
     </div>
 </div>
 
+<div class='panel panel-hidden' id='panel-company-addresses'>
+    <div class='panel-heading'>
+        <div class='d-flex flex-wrap'>
+            <h4>{% trans "Company addresses" %}</h4>
+            {% include "spacer.html" %}
+            <div class='btn-group' role='group'>
+                {% if roles.purchase_order.add or roles.sales_order.add %}
+                <button class='btn btn-success' type='button' id='new-address' title='{% trans "Add Address" %}'>
+                    <div class='fas fa-plus-circle'></div> {% trans "Add Address" %}
+                </button>
+                {% endif %}
+            </div>
+        </div>
+    </div>
+    <div class='panel-content'>
+        <div id='addresses-button-toolbar'>
+            <div class='btn-group' role='group'>
+                {% include "filter_list.html" with id="addresses" %}
+            </div>
+        </div>
+
+        <table class='table table-striped table-condensed' id='addresses-table' data-toolbar='#addresses-button-toolbar'></table>
+    </div>
+</div>
+
 <div class='panel panel-hidden' id='panel-attachments'>
     <div class='panel-heading'>
         <div class='d-flex flex-wrap'>
@@ -308,6 +333,26 @@
             });
         });
     });
+
+    // Callback function for when the 'addresses' panel is loaded
+    onPanelLoad('company-addresses', function(){
+        loadAddressTable('#addresses-table', {
+            params: {
+                company: {{ company.pk }},
+            },
+            allow_edit: {% js_bool roles.purchase_order.change %} || {% js_bool roles.sales_order.change %},
+            allow_delete: {% js_bool roles.purchase_order.delete %} || {% js_bool roles.sales_order.delete %},
+        });
+
+        $('#new-address').click(function() {
+            createAddress({
+                company: {{ company.pk }},
+                onSuccess: function() {
+                    $('#addresses-table').bootstrapTable('refresh');
+                }
+            })
+        })
+    })
 
     // Callback function when the 'notes' panel is loaded
     onPanelLoad('company-notes', function() {
