--- a/InvenTree/templates/InvenTree/settings/user_sso.html
+++ b/InvenTree/templates/InvenTree/settings/user_sso.html
@@ -64,7 +64,7 @@
 
     {% else %}
     <div class='alert alert-block alert-warning'>
-        {% trans "Single Sign On is not enabled for this server" %"}
+        {% trans "Single Sign On is not enabled for this server" %}
     </div>
     {% endif %}
 
