Move part parameter settings onto their own page

--- a/InvenTree/templates/InvenTree/settings/settings.html
+++ b/InvenTree/templates/InvenTree/settings/settings.html
@@ -36,6 +36,7 @@
 {% include "InvenTree/settings/label.html" %}
 {% include "InvenTree/settings/report.html" %}
 {% include "InvenTree/settings/part.html" %}
+{% include "InvenTree/settings/part_parameters.html" %}
 {% include "InvenTree/settings/part_stocktake.html" %}
 {% include "InvenTree/settings/category.html" %}
 {% include "InvenTree/settings/pricing.html" %}
