--- a/InvenTree/templates/InvenTree/settings/sidebar.html
+++ b/InvenTree/templates/InvenTree/settings/sidebar.html
@@ -44,6 +44,8 @@
 {% include "sidebar_item.html" with label='category' text=text icon="fa-sitemap" %}
 {% trans "Parts" as text %}
 {% include "sidebar_item.html" with label='parts' text=text icon="fa-shapes" %}
+{% trans "Part Parameters" as text %}
+{% include "sidebar_item.html" with label='part-parameters' text=text icon="fa-th-list" %}
 {% trans "Stock" as text %}
 {% include "sidebar_item.html" with label='stock' text=text icon="fa-boxes" %}
 {% trans "Stocktake" as text %}
