--- a/InvenTree/templates/InvenTree/settings/part_parameters.html
+++ b/InvenTree/templates/InvenTree/settings/part_parameters.html
@@ -14,6 +14,11 @@
 {% endblock actions %}
 
 {% block content %}
+<div id='param-buttons'>
+    <div class='btn-group' role='group'>
+        {% include "filter_list.html" with id="parameter-templates" %}
+    </div>
+</div>
 <table class='table table-striped table-condensed' id='param-table' data-toolbar='#param-buttons'>
 </table>
 
