Rename "type" field to "param_type"
- Should have seen that one coming

--- a/InvenTree/templates/InvenTree/settings/settings_staff_js.html
+++ b/InvenTree/templates/InvenTree/settings/settings_staff_js.html
@@ -313,7 +313,7 @@ onPanelLoad('part-parameters', function() {
                 name: {},
                 units: {},
                 description: {},
-                type: {},
+                param_type: {},
                 validator: {},
             },
             method: 'POST',
