--- a/InvenTree/templates/stock_table.html
+++ b/InvenTree/templates/stock_table.html
@@ -45,7 +45,7 @@
                 </div>
             {% endif %}
             {% endif %}
-            {% include "filter_list.html" with id="stock" %}
+            {% include "filter_list.html" with prefix=prefix id="stock" %}
         </div>
     </div>
 </div>
