--- a/InvenTree/order/templates/order/return_order_base.html
+++ b/InvenTree/order/templates/order/return_order_base.html
@@ -3,7 +3,7 @@
 {% load i18n %}
 {% load static %}
 {% load inventree_extras %}
-{% load status_codes %}
+{% load generic %}
 
 {% block page_title %}
 {% inventree_title %} | {% trans "Return Order" %}
