Fix category filtering for parameteric part table

--- a/InvenTree/part/templates/part/category.html
+++ b/InvenTree/part/templates/part/category.html
@@ -297,9 +297,11 @@
         loadParametricPartTable(
             "#parametric-part-table",
             {
-                {% if category %}
-                category: {{ category.pk }},
-                {% endif %}
+                params: {
+                    {% if category %}
+                    category: {{ category.pk }},
+                    {% endif %}
+                },
             }
         );
     });
