--- a/InvenTree/company/templates/company/supplier_part.html
+++ b/InvenTree/company/templates/company/supplier_part.html
@@ -162,7 +162,7 @@ src="{% static 'img/blank_image.png' %}"
             <td>{{ part.packaging }}{% include "clip.html" %}</td>
         </tr>
         {% endif %}
-        {% if part.pack_units %}
+        {% if part.pack_quantity %}
         <tr>
             <td><span class='fas fa-box'></span></td>
             <td>
@@ -174,10 +174,10 @@ src="{% static 'img/blank_image.png' %}"
                 {% endif %}
             </td>
             <td>
-                {{ part.pack_units }}
+                {{ part.pack_quantity }}
                 {% include "clip.html" %}
-                {% if part.part.units and part.pack_units_native %}
-                <span class='fas fa-info-circle float-right' title='{% decimal part.pack_units_native %} {{ part.part.units }}'></span>
+                {% if part.part.units and part.pack_quantity_native %}
+                <span class='fas fa-info-circle float-right' title='{% decimal part.pack_quantity_native %} {{ part.part.units }}'></span>
                 {% endif %}
             </td>
         </tr>
