--- a/docs/_includes/overrides/main.html
+++ b/docs/_includes/overrides/main.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block header %}
+{% block footer %}
 {% include "partials/version_banner.html" %}
-{% include "partials/header.html" %}
-{% endblock header %}
+{% include "partials/footer.html" %}
+{% endblock footer %}
