--- a/docs/_includes/overrides/partials/version_banner.html
+++ b/docs/_includes/overrides/partials/version_banner.html
@@ -3,11 +3,11 @@
     <div class='md-grid md-typeset'>
         <small>
         {% if config.readthedocs.version == 'latest' %}
-            This documentation is for the <em>development</em> version of InvenTree, which may be significantly different from the stable releases.
+            This documentation is for the <strong>development</strong> version of InvenTree.
         {% else %}
             This documentation is for an outdated version of InvenTree.
         {% endif %}
-        For <em>stable</em> release documentation, use the version selector located in the bottom right corner of this page.
+        For <strong>stable</strong> release documentation, use the version selector located in the bottom right corner of this page.
         </small>
         <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
     </div>
