Hide version banner

--- a/docs/_includes/overrides/partials/version_banner.html
+++ b/docs/_includes/overrides/partials/version_banner.html
@@ -1,4 +1,4 @@
-{% if config.version_banner %}
+{% if False and config.version_banner %}
 <div class='alert alert-warning alert-dismissable alert-version' role='alert'>
     <div class='md-grid md-typeset'>
         <small>
