--- a/InvenTree/company/templates/company/supplier_part.html
+++ b/InvenTree/company/templates/company/supplier_part.html
@@ -162,11 +162,24 @@ src="{% static 'img/blank_image.png' %}"
             <td>{{ part.packaging }}{% include "clip.html" %}</td>
         </tr>
         {% endif %}
-        {% if part.pack_size != 1.0 %}
+        {% if part.pack_quantity %}
         <tr>
             <td><span class='fas fa-box'></span></td>
-            <td>{% trans "Pack Quantity" %}</td>
-            <td>{% decimal part.pack_size %} {% include "part/part_units.html" with part=part.part %}</td>
+            <td>
+                {% trans "Units" %}
+                {% if part.part.units %}
+                <span class='float-right'>
+                    <em>[ {% include "part/part_units.html" with part=part.part %}]</em>
+                </span>
+                {% endif %}
+            </td>
+            <td>
+                {{ part.pack_quantity }}
+                {% include "clip.html" %}
+                {% if part.part.units and part.pack_quantity_native %}
+                <span class='fas fa-info-circle float-right' title='{% decimal part.pack_quantity_native %} {{ part.part.units }}'></span>
+                {% endif %}
+            </td>
         </tr>
         {% endif %}
         {% if part.note %}
