- Bump djLint to 1.29.0 (from 1.25.0) in the CI linting scripts - Add alt attribute to the img tags in the templates (required by the bump)

--- a/InvenTree/order/templates/order/order_base.html
+++ b/InvenTree/order/templates/order/order_base.html
@@ -92,7 +92,7 @@
 {% endblock actions %}
 
 {% block thumbnail %}
-<img class='part-thumb'
+<img alt="{% trans "Supplier part thumbnail" %}"  class='part-thumb'
 {% if order.supplier and order.supplier.image %}
 src="{{ order.supplier.image.url }}"
 {% else %}
