--- a/InvenTree/templates/InvenTree/settings/plugin_details.html
+++ b/InvenTree/templates/InvenTree/settings/plugin_details.html
@@ -44,7 +44,7 @@
         {% endif %}
     </td>
     <td>{{ plugin_key }}</td>
-    {% trans "Unvailable" as no_info %}
+    {% trans "Unavailable" as no_info %}
     <td>
         {% if plugin.author %}
         {{ plugin.author }}
