--- a/InvenTree/templates/InvenTree/settings/user_display.html
+++ b/InvenTree/templates/InvenTree/settings/user_display.html
@@ -94,7 +94,7 @@
             </div>
             <p>{% trans "Some languages are not complete" %}
             {% if ALL_LANG %}
-            . <a href="{% url 'settings' %}">{% trans "Show only sufficent" %}</a>
+            . <a href="{% url 'settings' %}">{% trans "Show only sufficient" %}</a>
             {% else %}
             {% trans "and hidden." %} <a href="?alllang">{% trans "Show them too" %}</a>
             {% endif %}
