--- a/InvenTree/templates/account/base.html
+++ b/InvenTree/templates/account/base.html
@@ -95,7 +95,7 @@ $(document).ready(function () {
 
     {% if messages %}
     {% for message in messages %}
-    showMessage("{{ messsage }}");
+    showMessage("{{ message }}");
     {% endfor %}
     {% endif %}
 
