--- a/InvenTree/templates/InvenTree/settings/settings_staff_js.html
+++ b/InvenTree/templates/InvenTree/settings/settings_staff_js.html
@@ -385,3 +385,23 @@ onPanelLoad('stocktake', function() {
     });
     {% endif %}
 });
+
+// Javascript for plugins panel
+onPanelLoad('plugin', function() {
+
+    {% plugins_enabled as plug %}
+
+{% if plug %}
+    // Callback to install new plugin
+    $("#install-plugin").click(function() {
+        installPlugin();
+    });
+
+    // Callback to activate a plugin
+    $(".btn-plugin-enable").click(function() {
+        let pk = $(this).attr('pk');
+        activatePlugin(pk);
+    });
+
+{% endif %}
+});
