--- a/InvenTree/templates/InvenTree/settings/plugin.html
+++ b/InvenTree/templates/InvenTree/settings/plugin.html
@@ -56,8 +56,14 @@
 <table class='table table-striped table-condensed'>
     <thead>
         <col width='25'>
+        {% if user.is_staff and perms.plugin.change_pluginconfig %}
+        <col width='25'>
+        {% endif %}
         <tr>
             <th></th>
+            {% if user.is_staff and perms.plugin.change_pluginconfig %}
+            <th></th>
+            {% endif %}
             <th>{% trans "Name" %}</th>
             <th>{% trans "Key" %}</th>
             <th>{% trans "Author" %}</th>
@@ -72,6 +78,9 @@
         {% if pl_list %}
         <tr>
             <td></td>
+            {% if user.is_staff and perms.plugin.change_pluginconfig %}
+            <td></td>
+            {% endif %}
             <td colspan="6">
                 <h5>{% trans 'Active plugins' %}</h5>
             </td>
@@ -85,6 +94,9 @@
         {% if in_pl_list %}
         <tr>
             <td></td>
+            {% if user.is_staff and perms.plugin.change_pluginconfig %}
+            <td></td>
+            {% endif %}
             <td colspan="6">
                 <h5>{% trans 'Inactive plugins' %}</h5>
             </td>
