front-end table for rendering plugins

--- a/InvenTree/templates/InvenTree/settings/settings_staff_js.html
+++ b/InvenTree/templates/InvenTree/settings/settings_staff_js.html
@@ -391,6 +391,10 @@ onPanelLoad('plugin', function() {
 
     {% plugins_enabled as plug %}
 
+    loadPluginTable('#plugin-table', {
+        custom: {% js_bool plug %},
+    });
+
 {% if plug %}
     // Callback to install new plugin
     $("#install-plugin").click(function() {
