--- a/InvenTree/templates/InvenTree/settings/plugin.html
+++ b/InvenTree/templates/InvenTree/settings/plugin.html
@@ -52,6 +52,17 @@
 </div>
 {% endif %}
 
+<div id='plugin-button-toolbar'>
+    <div class='button-toolbar container-fluid'>
+        <div class='btn-group' role='group'>
+            {% include "filter_list.html" with id="plugins" %}
+        </div>
+    </div>
+</div>
+<div class='table-responsive'>
+    <table class='table table-striped table-condensed' id='plugin-table' data-toolbar='#plugin-button-toolbar'></table>
+</div>
+
 <div class='table-responsive'>
 <table class='table table-striped table-condensed'>
     <thead>
@@ -74,6 +85,7 @@
     </thead>
 
     <tbody>
+
         {% plugin_list as pl_list %}
         {% if pl_list %}
         <tr>
