Enable and disable plugins via the API (#4964)
* Cleanup plugin settings page

- Template adjustments

* Activate plugin directly via API

* Update plugin activate endpoint

- Allow plugin to be deactivated also
- Default value = True if not provided

* Update front-end / js

- Allow same JS method to either enable or disable a plugin

* Hide info for plugins which are not active

* remove duplicated column

* Tweak serializer docstring

* Fix typo

* Add extra data to plugin serializer

- is_builtin
- is_sample

* Some backend cleanup

- Don't stringify null values
- Don't replace None with "Unavailable"

* front-end table for rendering plugins

* Change default sorting

- Show active plugins first

* Fix button callback

* Remove old template

* JS linting

* More linting

--- a/InvenTree/templates/InvenTree/settings/settings_staff_js.html
+++ b/InvenTree/templates/InvenTree/settings/settings_staff_js.html
@@ -385,3 +385,21 @@ onPanelLoad('stocktake', function() {
     });
     {% endif %}
 });
+
+// Javascript for plugins panel
+onPanelLoad('plugin', function() {
+
+{% plugins_enabled as plug %}
+
+    loadPluginTable('#plugin-table', {
+        custom: {% js_bool plug %},
+    });
+
+{% if plug %}
+    // Callback to install new plugin
+    $("#install-plugin").click(function() {
+        installPlugin();
+    });
+
+{% endif %}
+});
