--- a/InvenTree/templates/InvenTree/settings/plugin.html
+++ b/InvenTree/templates/InvenTree/settings/plugin.html
@@ -52,37 +52,15 @@
 </div>
 {% endif %}
 
+<div id='plugin-button-toolbar'>
+    <div class='button-toolbar container-fluid'>
+        <div class='btn-group' role='group'>
+            {% include "filter_list.html" with id="plugins" %}
+        </div>
+    </div>
+</div>
 <div class='table-responsive'>
-<table class='table table-striped table-condensed'>
-    <thead>
-        <tr>
-            <th>{% trans "Name" %}</th>
-            <th>{% trans "Key" %}</th>
-            <th>{% trans "Author" %}</th>
-            <th>{% trans "Date" %}</th>
-            <th>{% trans "Version" %}</th>
-            <th></th>
-        </tr>
-    </thead>
-
-    <tbody>
-        {% plugin_list as pl_list %}
-        {% if pl_list %}
-        <tr><td colspan="6"><h6>{% trans 'Active plugins' %}</h6></td></tr>
-        {% for plugin_key, plugin in pl_list.items %}
-            {% include "InvenTree/settings/plugin_details.html" with plugin=plugin plugin_key=plugin_key %}
-        {% endfor %}
-        {% endif %}
-
-        {% inactive_plugin_list as in_pl_list %}
-        {% if in_pl_list %}
-        <tr><td colspan="6"><h6>{% trans 'Inactive plugins' %}</h6></td></tr>
-        {% for plugin_key, plugin in in_pl_list.items %}
-            {% include "InvenTree/settings/plugin_details.html" with plugin=plugin plugin_key=plugin_key %}
-        {% endfor %}
-        {% endif %}
-    </tbody>
-</table>
+    <table class='table table-striped table-condensed' id='plugin-table' data-toolbar='#plugin-button-toolbar'></table>
 </div>
 
 {% plugin_errors as pl_errors %}
