CSS fix for 2FA token
- Enforce white background for the QR code

--- a/InvenTree/InvenTree/static/css/inventree.css
+++ b/InvenTree/InvenTree/static/css/inventree.css
@@ -105,6 +105,10 @@ main {
     font-size: 110%;
 }
 
+.bg-qr-code {
+    background-color: #FFF !important;
+}
+
 .qr-code {
     max-width: 400px;
     max-height: 400px;
