--- a/InvenTree/templates/allauth_2fa/setup.html
+++ b/InvenTree/templates/allauth_2fa/setup.html
@@ -14,8 +14,8 @@
   {% trans 'Scan the QR code below with a token generator of your choice (for instance Google Authenticator).' %}
 </p>
 
-<div class="bg-light rounded">
-<img src="{{ qr_code_url }}" class="mx-auto d-block"/>
+<div class="bg-qr-code rounded">
+<img src="{{ qr_code_url }}" alt="{% trans 'QC Code' %}" class="mx-auto d-block"/>
 </div>
 <br>
 
