--- a/InvenTree/templates/version.html
+++ b/InvenTree/templates/version.html
@@ -8,5 +8,5 @@ Database: {% inventree_db_engine %}
 Debug-Mode: {% inventree_in_debug_mode %}
 Deployed using Docker: {% inventree_docker_mode %}
 {% inventree_installer as installer %}{% if installer %}Installer: {{ installer }}{% endif %}
-{% inventree_platform as platform %}{% if platform %}Platform: {{ platform }}{% endif %}
+{% inventree_target as target %}{% if target %}Target: {{ target }}{% endif %}
 Active plugins: {% plugins_info %}
