--- a/InvenTree/templates/version.html
+++ b/InvenTree/templates/version.html
@@ -7,6 +7,7 @@ Django Version: {% django_version %}
 Database: {% inventree_db_engine %}
 Debug-Mode: {% inventree_in_debug_mode %}
 Deployed using Docker: {% inventree_docker_mode %}
+Platform: {% inventree_platform %}
 Installer: {% inventree_installer %}
 {% inventree_target as target %}{% if target %}Target: {{ target }}{% endif %}
 Active plugins: {% plugins_info %}
