fixing a bug where the stock dont change unless refresh happen to the part detail

--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -187,7 +187,7 @@
 {% endblock details %}
 
 {% block details_right %}
-    <table class='table table-condensed table-striped'>
+    <table class='table table-condensed table-striped' id='details-right-part'>
         <col width='25'>
         <tr>
             <td><h5><span class='fas fa-boxes'></span></h5></td>
