fixing icon issue and removing the can build untile it's added to api

--- a/InvenTree/part/templates/part/part_base.html
+++ b/InvenTree/part/templates/part/part_base.html
@@ -491,7 +491,10 @@
                 success: function(items) {
                     adjustStock(action, items, {
                         success: function() {
-                            location.reload();
+                            // location.reload()
+                            $("#stock-table").bootstrapTable('refresh')
+                            // $(table).bootstrapTable('refresh');
+                            updatePartQuantityTotals($('#details-right-part'),{{ part.pk }})
                         }
                     });
                 },
