--- a/InvenTree/label/templates/label/buildline/buildline_label.html
+++ b/InvenTree/label/templates/label/buildline/buildline_label.html
@@ -1,19 +1,3 @@
-{% extends "label/label_base.html" %}
-{% load barcode %}
+{% extends "label/buildline/buildline_label_base.html" %}
 
-<!--
-This is an example template for printing labels against BuildLine objects.
-Refer to the documentation for a full list of available template variables.
--->
-
-{% block style %}
-
-{% endblock style %}
-
-{% block content %}
-
-Build Order: {{ build.reference }}<br>
-Required Part: {{ part.full_name }}<br>
-Required Quantity: {{ quantity }}<br>
-
-{% endblock content %}
+<!-- Refer to the buildline_label_base template for further information -->
